# todoink

./: .flaskenv  .gitignore  README.md  launcher.py  pyproject.toml
src/: webapp.py
src/todoink/: __init__.py
src/todoink/api/: __init__.py  errors.py  general.py  todoist.py
src/todoink/controller/: __init__.py  app.py  visualizer.py
src/todoink/model/: app.py
